# r1-arc

./: .cursorrules  .enter  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  pyproject.toml  traceback.json
docs/: literature_review.md
docs/modelling/: Iteration_0_Hypotheses.md  Iteration_1_SFT.md  Iteration_2_GRPO.md  Iteration_3_Report.md
grpo_trainer_lora_model/: adapter_config.json
paper/: icml2018.bst  icml2018.sty  proposal.tex  references.bib  report.tex
scripts/: autorun.sh  background.sh  inference.sh  install.sh
src/: __init__.py  main.py
src/code_interpreter/: __init__.py  cli.py  code_analysis.py  correctness.py  execution.py  shell.py  static_analysis.py  tracer.py  tracy.py
src/code_interpreter/templates/: wrapper.jinja2
src/code_interpreter/tests/: test_code_analysis.py  test_execution.py  test_solvers.py  test_solvers_snapshots.py  test_static_analysis.py
src/code_interpreter/tests/__snapshots__/: test_solvers_snapshots.ambr  test_static_analysis.ambr
src/data/: difficulty.json  eval.jsonl  train.jsonl
src/formatters/: grammars.py  python.lark  test_grammars.py
src/formatters/__snapshots__/: test_grammars.ambr
src/playpen/: 0314_qwen_7b.ipynb  Qwen 2.5 GRPO ARC.ipynb  Qwen 2.5 GRPO.ipynb  Studio.ipynb  grammars.py  guided_inference.ipynb  hmr.ipynb  move_tasks.py  my_module.py  python.lark  test_arc_dsl.py  tracer.py  trainer_qwen_7b.py  vllm_client.py
src/playpen/grpo_trainer_lora_model/: adapter_config.json
src/prompts/: __init__.py  basic.md  cot_1f642eb9.md  cot_pattern_only.md
src/providers/: cli.py  models.py
src/services/formatters/: grid.py
src/tasks/: train_sol.json
src/training/: __init__.py  env.py  hf_dataset.py  test_env.py  traceback.json
src/training/__snapshots__/: test_env.ambr
src/utils/: __init__.py  cli.py  devtools.py  grid.py  models.py  tasks.py  tokenizers.py  types.py
src/utils/exec_server/: __init__.py  cli.py  code_analysis.py  execution.py
src/utils/exec_server/templates/: wrapper.jinja2
src/utils/exec_server/tests/: test_code_analysis.py  test_execution.py
src/utils/tests/: test_models.py
src/utils/tests/__snapshots__/: test_models.ambr
tmp/: 20250312_1852-35239382.py  20250312_1852-4a61774b.py  20250312_1852-52a4b765.py  20250312_1852-7685dc8c.py  20250312_1852-80fe54fb.py  20250312_1852-94bec2cc.py  20250312_1852-b24322f2.py  20250312_1852-b8921dca.py  20250312_1852-c805ee59.py  20250312_1852-ece8d61e.py
