[project]
name = "r1-arc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.8.0",
    "asyncio>=3.4.3",
    "better-exceptions>=0.3.3",
    "deepseek-tokenizer>=0.1.3",
    "devtools>=0.12.2",
    "jinja2>=3.1.6",
    "libcst>=1.6.0",
    "logfire>=3.8.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.66.1",
    "orjson>=3.10.15",
    "pygments>=2.19.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.2",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "typer>=0.15.2",
    "viztracer>=1.0.2",
]

[project.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "syrupy>=4.9.0",
]
# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scope = "function"
